force-app/main/default/objects/Order/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <label>Request Desscription</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>