force-app/main/default/objects/Order/fields/Request_From__c.field-meta.xml
<CustomField>
    <fullName>Request_From__c</fullName>
    <label>Request From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>PCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>