force-app/main/default/objects/Order/fields/Retail_As_is__c.field-meta.xml
<CustomField>
    <fullName>Retail_As_is__c</fullName>
    <label>Retail &quot;As is&quot;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>