force-app/main/default/objects/Order/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review</label>
    <type>Checkbox</type>
</CustomField>