force-app/main/default/objects/Order/fields/Rider_seat__c.field-meta.xml
<CustomField>
    <fullName>Rider_seat__c</fullName>
    <label>Rider seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>