force-app/main/default/objects/Order/fields/Round_Robin_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin Assignment</label>
    <referenceTo>Round_Robin_Assignment__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>