force-app/main/default/objects/Order/fields/Run_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Run_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Reassign</label>
    <type>Checkbox</type>
</CustomField>