force-app/main/default/objects/Order/fields/Sale_Method__c.field-meta.xml
<CustomField>
    <fullName>Sale_Method__c</fullName>
    <label>Sale Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trực tiếp</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>