force-app/main/default/objects/Order/fields/Sale_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sale_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Owner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Sale Consultant</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders6</relationshipName>
    <type>Lookup</type>
</CustomField>