force-app/main/default/objects/Order/fields/Sales_Associate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>