force-app/main/default/objects/Order/fields/Sales_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Name__c</fullName>
    <formula>Product__r.Sales_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Name</label>
    <type>Text</type>
</CustomField>