force-app/main/default/objects/Order/fields/Send_Email_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Survey</label>
    <type>Checkbox</type>
</CustomField>