force-app/main/default/objects/Order/fields/Sender_Document__c.field-meta.xml
<CustomField>
    <fullName>Sender_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender Document</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders7</relationshipName>
    <type>Lookup</type>
</CustomField>