force-app/main/default/objects/Order/fields/Service_Hours__c.field-meta.xml
<CustomField>
    <fullName>Service_Hours__c</fullName>
    <label>Service Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>