force-app/main/default/objects/Order/fields/Service_Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Job_Start_Date__c</fullName>
    <label>Service Job Start Date</label>
    <type>DateTime</type>
</CustomField>