force-app/main/default/objects/Order/fields/Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>Service_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>