force-app/main/default/objects/Order/fields/Service_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Status__c</fullName>
    <label>Service Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>