force-app/main/default/objects/Order/fields/Small_covers__c.field-meta.xml
<CustomField>
    <fullName>Small_covers__c</fullName>
    <label>Small covers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>