force-app/main/default/objects/Order/fields/SoldHour__c.field-meta.xml
<CustomField>
    <fullName>SoldHour__c</fullName>
    <label>Sold Hour</label>
    <summarizedField>OrderItem.Labour_Hours__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>