force-app/main/default/objects/Order/fields/Spark_plugs__c.field-meta.xml
<CustomField>
    <fullName>Spark_plugs__c</fullName>
    <label>Spark plugs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>