force-app/main/default/objects/Order/fields/Steering_bearings__c.field-meta.xml
<CustomField>
    <fullName>Steering_bearings__c</fullName>
    <label>Steering bearings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>