force-app/main/default/objects/Order/fields/Stock_No__c.field-meta.xml
<CustomField>
    <fullName>Stock_No__c</fullName>
    <label>Stock No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>