force-app/main/default/objects/Order/fields/Successful_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Successful_Delivery_Date__c</fullName>
    <label>Successful Delivery Date</label>
    <type>Date</type>
</CustomField>