force-app/main/default/objects/Order/fields/Sum_Sold_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sum_Sold_Hours__c</fullName>
    <label>Sum Sold Hours</label>
    <summarizedField>OrderItem.Labour_Hours__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>