force-app/main/default/objects/Order/fields/Swing_arm_bearings__c.field-meta.xml
<CustomField>
    <fullName>Swing_arm_bearings__c</fullName>
    <label>Swing arm bearings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>