force-app/main/default/objects/Order/fields/Switches_Housings__c.field-meta.xml
<CustomField>
    <fullName>Switches_Housings__c</fullName>
    <label>Switches/Housings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>