force-app/main/default/objects/Order/fields/Tail_light_s__c.field-meta.xml
<CustomField>
    <fullName>Tail_light_s__c</fullName>
    <label>Tail light(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>