force-app/main/default/objects/Order/fields/Tax_Address__c.field-meta.xml
<CustomField>
    <fullName>Tax_Address__c</fullName>
    <label>Tax Address</label>
    <type>TextArea</type>
</CustomField>