force-app/main/default/objects/Order/fields/Tax_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Tax_Mobile__c</fullName>
    <label>Tax Mobile</label>
    <type>Phone</type>
</CustomField>