force-app/main/default/objects/Order/fields/Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name__c</fullName>
    <label>Tax Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>