force-app/main/default/objects/Order/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>