force-app/main/default/objects/Order/fields/Time_Einvoice__c.field-meta.xml
<CustomField>
    <fullName>Time_Einvoice__c</fullName>
    <formula>DATETIMEVALUE( Invoice_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Einvoice</label>
    <type>DateTime</type>
</CustomField>