force-app/main/default/objects/Order/fields/Titile_No__c.field-meta.xml
<CustomField>
    <fullName>Titile_No__c</fullName>
    <label>Titile No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>