force-app/main/default/objects/Order/fields/Total_Amount_Install__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Install__c</fullName>
    <formula>Installation_Order__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Install</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>