force-app/main/default/objects/Order/fields/Total_Amount_Installation__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Installation__c</fullName>
    <label>Total Amount Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>