force-app/main/default/objects/Order/fields/Total_Cash_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Amount__c</fullName>
    <description>Hình thức thanh toán - TM - Account report</description>
    <label>TM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>