force-app/main/default/objects/Order/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula
  >IF(Total_Amount__c -  TotalAmount&lt;0,0,Total_Amount__c -  TotalAmount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>