force-app/main/default/objects/Order/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <label>Total Discount Amount</label>
    <summarizedField>OrderItem.Discount_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>