force-app/main/default/objects/Order/fields/Total_Internal_usage__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_usage__c</fullName>
    <label>Total Internal usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>