force-app/main/default/objects/Order/fields/Total_Pos_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pos_Amount__c</fullName>
    <description>POS - Accounting Report</description>
    <label>POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>