force-app/main/default/objects/Order/fields/Total_Survey_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Survey_Sales__c</fullName>
    <label>Total Survey Sales</label>
    <summaryFilterItems>
        <field>SurveySales__c.Question_0__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveySales__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>