force-app/main/default/objects/Order/fields/Total_Survey_Service__c.field-meta.xml
<CustomField>
    <fullName>Total_Survey_Service__c</fullName>
    <label>Total Survey Service</label>
    <summaryFilterItems>
        <field>SurveyService__c.Question_0__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyService__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>