force-app/main/default/objects/Order/fields/Total_Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Transfer_Amount__c</fullName>
    <description>CK - Accounting Report</description>
    <label>CK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>