force-app/main/default/objects/Order/fields/TSI__c.field-meta.xml
<CustomField>
    <fullName>TSI__c</fullName>
    <label>TSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>