force-app/main/default/objects/Order/fields/Tyres__c.field-meta.xml
<CustomField>
    <fullName>Tyres__c</fullName>
    <label>Tyres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>