force-app/main/default/objects/Order/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>