force-app/main/default/objects/Order/fields/Voucher_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Voucher_IMEI__c</fullName>
    <formula>Voucher__r.IMEI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher IMEI</label>
    <type>Text</type>
</CustomField>