force-app/main/default/objects/Order/fields/Warranty_0_Kilometer__c.field-meta.xml
<CustomField>
    <fullName>Warranty_0_Kilometer__c</fullName>
    <formula>IF(AND(RecordType.DeveloperName == &quot;Warranty&quot;, Mileage__c = 0), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty 0 Kilometer</label>
    <type>Checkbox</type>
</CustomField>