force-app/main/default/objects/Order/fields/Wheel_bearings__c.field-meta.xml
<CustomField>
    <fullName>Wheel_bearings__c</fullName>
    <label>Wheel bearings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>