force-app/main/default/objects/Order/fields/Wheels__c.field-meta.xml
<CustomField>
    <fullName>Wheels__c</fullName>
    <label>Wheels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>