force-app/main/default/objects/Order/fields/Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale__c</fullName>
    <label>Wholesale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>