force-app/main/default/objects/Order/fields/Workshop_Note__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Note__c</fullName>
    <label>Workshop Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>