force-app/main/default/objects/Order/fields/X0km_Recall__c.field-meta.xml
<CustomField>
    <fullName>X0km_Recall__c</fullName>
    <formula
  >IF(AND(RecordType.DeveloperName == &quot;Recall_Service&quot;, Mileage__c = 0), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>0km Recall</label>
    <type>Checkbox</type>
</CustomField>