force-app/main/default/objects/Order/fields/YMHVN_Log__c.field-meta.xml
<CustomField>
    <fullName>YMHVN_Log__c</fullName>
    <label>YMHVN Log</label>
    <type>TextArea</type>
</CustomField>