force-app/main/default/objects/Order/recordTypes/Appraisal.recordType-meta.xml
<RecordType>
    <fullName>Appraisal</fullName>
    <active>true</active>
    <label>Sales Appraisal Order</label>
</RecordType>