force-app/main/default/objects/Order/recordTypes/Bike.recordType-meta.xml
<RecordType>
    <fullName>Bike</fullName>
    <active>true</active>
    <label>Sales Bike Order</label>
</RecordType>