force-app/main/default/objects/Order/recordTypes/External_Service.recordType-meta.xml
<RecordType>
    <fullName>External_Service</fullName>
    <active>true</active>
    <label>Service Order</label>
</RecordType>