force-app/main/default/objects/Order/recordTypes/Free_Coupon.recordType-meta.xml
<RecordType>
    <fullName>Free_Coupon</fullName>
    <active>true</active>
    <label>Free Coupon Order</label>
</RecordType>