force-app/main/default/objects/Order/recordTypes/Free_Service_Order.recordType-meta.xml
<RecordType>
    <fullName>Free_Service_Order</fullName>
    <active>true</active>
    <label>Free Service Order</label>
</RecordType>