force-app/main/default/objects/Order/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <label>Installation</label>
</RecordType>