force-app/main/default/objects/Order/recordTypes/Internal_Service.recordType-meta.xml
<RecordType>
    <fullName>Internal_Service</fullName>
    <active>true</active>
    <label>Internal Service Order</label>
</RecordType>