force-app/main/default/objects/Order/recordTypes/PCA.recordType-meta.xml
<RecordType>
    <fullName>PCA</fullName>
    <active>true</active>
    <label>Sales PCA Order</label>
</RecordType>