force-app/main/default/objects/Order/recordTypes/Profomar_Order.recordType-meta.xml
<RecordType>
    <fullName>Profomar_Order</fullName>
    <active>true</active>
    <label>Profomar Order</label>
</RecordType>