force-app/main/default/objects/Order/recordTypes/Quick_Service_Order.recordType-meta.xml
<RecordType>
    <fullName>Quick_Service_Order</fullName>
    <active>true</active>
    <label>Quick Service Order</label>
</RecordType>