force-app/main/default/objects/Order/recordTypes/Recall_Service.recordType-meta.xml
<RecordType>
    <fullName>Recall_Service</fullName>
    <active>true</active>
    <label>Recall Service Order</label>
</RecordType>