force-app/main/default/objects/Order/recordTypes/Service_Package.recordType-meta.xml
<RecordType>
    <fullName>Service_Package</fullName>
    <active>true</active>
    <label>Service Package Order</label>
</RecordType>