force-app/main/default/objects/Order/recordTypes/Warranty.recordType-meta.xml
<RecordType>
    <fullName>Warranty</fullName>
    <active>true</active>
    <label>Warranty Order</label>
</RecordType>