force-app/main/default/objects/Order/validationRules/Activate_when_pays_2_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Activate_when_pays_2_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Pays__c) &lt;&gt; &apos;Thanh toán 2 lần&apos;,TEXT(Pays__c) &lt;&gt; &apos;Thanh toán 3 lần&apos; , NOT(ISNULL(Payment_2_Percent__c)))</errorConditionFormula>
    <errorDisplayField>Payment_2_Percent__c</errorDisplayField>
    <errorMessage>Chọn thanh toán 2 lần chở lên để nhập payment 2</errorMessage>
</ValidationRule>