force-app/main/default/objects/Order/validationRules/Activate_when_pays_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Activate_when_pays_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Pays__c) &lt;&gt; &apos;Thanh toán 3 lần&apos; , NOT(ISNULL(Payment_3_Percent__c)))</errorConditionFormula>
    <errorDisplayField>Payment_3_Percent__c</errorDisplayField>
    <errorMessage>Chọn thanh toán 3 lần chở lên để nhập payment 3</errorMessage>
</ValidationRule>