force-app/main/default/objects/Order/validationRules/Check_Delivery_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Delivery_Date</fullName>
    <active>true</active>
    <description>Check Delivery Date for Service Order, Quick Service, Free Service</description>
    <errorConditionFormula>IF(AND
(ISCHANGED( Status ), ISPICKVAL(Status , &apos;Completed&apos;),
AND (
OR(RecordType.DeveloperName == &quot;Quick_Service_Order&quot;,
RecordType.DeveloperName == &quot;Free_Service_Order&quot;,
RecordType.DeveloperName == &quot;External_Service&quot;)),
AND(ISBLANK(Bike_Delivery_Date__c)
)
),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Missing requirement field&apos;s &quot;Bike Delivery Date&quot;</errorMessage>
</ValidationRule>