force-app/main/default/objects/Order/validationRules/Check_Free_Coupon.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Free_Coupon</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
ISCHANGED( Status )
,ISPICKVAL(Status , &apos;Completed&apos;)
,RecordType.DeveloperName == &quot;Free_Coupon&quot;
,ISBLANK( Service_Job_End_Date__c )
)
,TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Service_Job_End_Date__c</errorDisplayField>
    <errorMessage>Free Coupon Order need to fill in Service Job End Date before syncing.</errorMessage>
</ValidationRule>