force-app/main/default/objects/Order/validationRules/Check_Mechanic.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mechanic</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(ISCHANGED( Status ), ISPICKVAL(Status , &apos;Completed&apos;),
AND (
OR(RecordType.DeveloperName == &quot;Warranty&quot;,
RecordType.DeveloperName == &quot;Free_Coupon&quot;,
RecordType.DeveloperName == &quot;Free_Service_Order&quot;,
RecordType.DeveloperName == &quot;Quick_Service_Order&quot;,

RecordType.DeveloperName == &quot;Recall_Service&quot;)),
AND( ISBLANK(Mechanic__c)
)
)</errorConditionFormula>
    <errorMessage>Please choose Mechanic before complete this order</errorMessage>
</ValidationRule>